app/static/styles/about.css
.about-container {
    background-color: #343a40;
}

.header-text {
    text-align: center;
    color: white;
    font-size: 4vw;
}

/* if we want the card text centered: */
.carousel-item {
    text-align: center;
}

.card-img-top-luke {
    width: 100%;
    height: 45vw;
    object-fit: cover;
}

.card-img-top-sam {
    width: 100%;
    height: 45vw;
    object-fit: cover;
}

.card-img-top-mustafa {
    width: 100%;
    height: 45vw;
    object-fit: cover;
}

.card {
    margin-left: 25%;
    margin-right: 25%;
    margin-top: 5%;
    margin-bottom: 5%;
}


/* .card {
    margin: 40px;
} */

.card-body i {
    text-rendering: optimizeLegibility;
    font-size: 25px;
    color: #738F75;
    margin: 0.5em;
    border: none;
}

.card-body a {
    text-decoration: none;
}

.card-body i:hover {
    color: #1D341F;
}

